--- a/package.json
+++ b/package.json
@@ -9,24 +9,32 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.1",
+    "expo-dev-client": "~0.7.2",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.8.0",
+    "react-native-slick": "^1.6.0",
     "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.5",
+    "react-native-webview": "11.6.2",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
+    "react-slick": "^0.28.1",
     "react-use-safe-state": "^1.0.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
