--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.25.0",
     "expo": "~42.0.1",
     "expo-dev-client": "~0.7.2",
+    "expo-device": "~3.3.0",
+    "expo-notifications": "~0.12.3",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-date-picker": "^4.1.3",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-paystack-webview": "^4.0.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.8.0",
     "react-native-slick": "^1.6.0",
+    "react-native-super-grid": "^4.2.0",
     "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.5",
