--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-paystack-webview": "^4.0.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.8.0",
+    "react-native-scroll-into-view": "^2.0.2",
     "react-native-slick": "^1.6.0",
     "react-native-super-grid": "^4.2.0",
     "react-native-textarea": "^1.0.4",
