--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "expo-notifications": "~0.12.3",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-date-picker": "^4.1.3",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-paystack-webview": "^4.0.3",
