updated to beta package

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package":"tvccmobileapp.collinsrollins",
+      "package":"tvccmobileappbeta.collinsrollins",
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
