--- a/package.json
+++ b/package.json
@@ -9,39 +9,44 @@
   },
   "dependencies": {
     "@freakycoder/react-native-bounceable": "^0.2.5",
-    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.12",
-    "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-picker/picker": "^2.1.0",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.25.0",
-    "expo": "~42.0.1",
-    "expo-contacts": "~9.2.5",
-    "expo-dev-client": "~0.7.2",
-    "expo-device": "~3.3.0",
-    "expo-notifications": "~0.12.3",
-    "expo-permissions": "~12.1.1",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.2",
+    "expo": "^45.0.0",
+    "expo-checkbox": "^2.1.0",
+    "expo-contacts": "~10.2.0",
+    "expo-dev-client": "~1.0.0",
+    "expo-device": "~4.2.0",
+    "expo-media-library": "^14.1.0",
+    "expo-notifications": "~0.15.4",
+    "expo-permissions": "~13.2.0",
+    "expo-speech": "~10.2.0",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "firebase": "9.6.11",
     "moment": "^2.29.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-date-picker": "^4.1.3",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-paystack-webview": "^4.0.3",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "^3.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-scroll-into-view": "^2.0.2",
     "react-native-slick": "^1.6.0",
     "react-native-super-grid": "^4.2.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.3.0",
     "react-native-textarea": "^1.0.4",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.5",
-    "react-native-webview": "11.6.2",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
@@ -51,11 +56,12 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react-native": "^0.67.3"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "~0.67.6"
   },
   "private": true,
   "aws-export": "echo 'Update Expo AWS_EXPORTS secret with value: \n\n' && cat aws-exports.js |base64",
