--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.25.0",
     "expo": "^45.0.0",
+    "expo-av": "^11.2.3",
     "expo-checkbox": "^2.1.0",
     "expo-contacts": "~10.2.0",
     "expo-dev-client": "~1.0.0",
