--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.25.0",
+    "buffer": "^6.0.3",
     "expo": "^45.0.0",
     "expo-av": "^11.2.3",
     "expo-checkbox": "^2.1.0",
@@ -30,11 +32,13 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
     "firebase": "9.6.11",
+    "jsmediatags": "^3.9.7",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-date-picker": "^4.1.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paystack-webview": "^4.0.3",
